--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -2,9 +2,9 @@
   <input id="hidden" type="hidden" name="_method" value="PATCH">
   <h2>Article</h2>
   <label for="article_title">Title</label><br>
-  <input id="article_title" type="text" name="article[title]" value="article.title" /><br>
+  <input id="article_title" type="text" name="article[title]" value="<%=article.title%>" /><br>
   <label for="article_content">Content</label><br>
-  <input id="article_content" type="text" name="article[content]" value="article.content" /><br>
+  <input id="article_content" type="text" name="article[content]" value="<%=article.content%>" /><br>
   
   <input type="submit" value="Submit">
 </form>
