--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -4,7 +4,8 @@
   <label for="article_title">Title</label><br>
   <input id="article_title" type="text" name="article[title]" value="<%=article.title%>" /><br>
   <label for="article_content">Content</label><br>
-  <input id="article_content" type="text" name="article[content]" value="<%=article.content%>" /><br>
+  <textarea id="content" type="text" name="article[content]"  value="<%= @article.content %>">
+      </textarea>
   
   <input type="submit" value="Submit">
 </form>
