--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,5 +1,5 @@
 <form action='/articles' method="POST">
-  <h2>Pirate</h2>
+  <h2>Article</h2>
   <label for="article_title">Title</label><br>
   <input id="article_title" type="text" name="article[title]" /><br>
   <label for="article_content">Content</label><br>
